--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!-- Bannière -->
+<div class="full-background" id="home-background">
+  <div class="col-xs-12 col-md-4 ">
+    <div class="clock">
+      <div class="hour"></div>
+      <div class="second"></div>
+      <div class="center"></div>
+    </div>
+  </div>
+</div>
+<!-- Bannière -->
+
