page d'accueil wip

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,1 +1,12 @@
+// polices
+@font-face {
+  font-family: 'pimpernel';
+  src:font-url('pimpernel.otf');
+}
 
+// brand-color
+
+// text colors
+$b-grey-text: #575756;
+$b-grey-dark: #262626;
+$b-grey-icons: #3B3634;
