--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -21,5 +21,10 @@
   background: #00a3e1;
 }
 .bg-dark-blue {
-  background: #3b5998;
+  background: #453926;
+}
+
+// Alignments
+.center-align {
+  text-align: center;
 }
