--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,20 @@
 <!-- Bannière -->
 <div class="full-background" id="home-background">
-  <div class="col-xs-12 col-md-4 ">
+  <div class="background-content">
     <div class="clock">
       <div class="hour"></div>
       <div class="second"></div>
       <div class="center"></div>
     </div>
+    <h1 class="background-title center-align">
+      Un peu de patience,<br>l'oiseau fait son nid
+    </h1>
+    <p class="background-subtitle center-align">Site en construction<br>Ne soyez pas si pressés, on vous tient au jus !</p>
   </div>
 </div>
 <!-- Bannière -->
 
+<div class="socials">
+  <a href="/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+  <a href="/"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+</div>
