--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>TODO</title>
+    <meta name="description" content="Atelier Jus - 100% Bio Pressé à froid Fabriqué à Paris">
+    <title>Atelier Jus</title>
+    <meta property="og:title" content="Atelier Jus - 100% Bio Pressé à froid Fabriqué à Paris">
+    <meta property="og:type" content="article">
+    <meta property="og:description" content="Découvrez les jus de fruits pressés à froid de l'Atelier Jus.">
+    <meta property="og:site_name" content="Atelier Jus">
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
   </head>
   <body>
     <%= yield %>
