--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,20 @@
 <!-- Bannière -->
 <div class="full-background" id="home-background">
-  <div class="background-content">
-    <div class="clock">
-      <div class="hour"></div>
-      <div class="second"></div>
-      <div class="center"></div>
+  <div class="clock" id="clock-home">
+    <div class="hour"></div>
+    <div class="second"></div>
+    <div class="center"></div>
+  </div>
+  <div class="bg-content-container">
+    <div class="bg-content">
+      <div class="bg-logo center-align">
+        <%= image_tag('logo_atelier_jus.svg') %>
+      </div>
+      <h1 class="bg-title center-align">
+        Un peu de patience,<br>l'oiseau fait son nid
+      </h1>
+      <p class="bg-subtitle center-align">Site en construction<br>Ne soyez pas si pressés, on vous tient au jus !</p>
     </div>
-    <h1 class="background-title center-align">
-      Un peu de patience,<br>l'oiseau fait son nid
-    </h1>
-    <p class="background-subtitle center-align">Site en construction<br>Ne soyez pas si pressés, on vous tient au jus !</p>
   </div>
 </div>
 <!-- Bannière -->
