--- a/app/assets/stylesheets/components/_clock.scss
+++ b/app/assets/stylesheets/components/_clock.scss
@@ -2,8 +2,8 @@
 // Clock
 .clock {
   position: relative;
-  height: 300px;
-  width: 300px;
+  height: 12rem;
+  width: 12rem;
   background: transparent;
   box-sizing: border-box;
   border-radius: 100%;
@@ -13,8 +13,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  margin: auto;
-  margin-bottom: 50px;
   .top {
     position: absolute;
     width: 3px;
@@ -55,8 +53,8 @@
     margin: auto 0;
   }
   .center {
-    height: 50px;
-    width: 50px;
+    height: 2.3rem;
+    width: 2.3rem;
     position: absolute;
     left: 0;
     right: 0;
@@ -80,10 +78,10 @@
       position: absolute;
       content: "";
       background: #E96314;
-      height: 110px;
-      width: 12px;
-      top: 42px;
-      right: -1px;
+      height: 4rem;
+      width: 0.8rem;
+      top: 2rem;
+      right: -0.1rem;
       border-radius: 14px;
     }
   }
@@ -118,9 +116,9 @@
       position: absolute;
       content: "";
       background: #F7B925;
-      height: 144px;
-      width: 8px;
-      top: 7px;
+      height: 5rem;
+      width: 0.6rem;
+      top: 0.6rem;
       right: 0px;
       border-radius: 5px;
     }
