modifs de couleur et path du favicon

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -12,6 +12,14 @@ body {
 }
 
 // text colors
-$b-grey-text: #575756;
+$b-grey: #333333;
 $b-grey-dark: #262626;
-$b-grey-icons: #3B3634;
+$b-black: #000000;
+
+$b-grey-light: #3B3634;
+
+$b-red: #ff1f03;
+$b-orange: #ff4c00;
+$b-yellow: #ffb20d;
+$b-green: #33ff00;
+
