--- a/app/assets/stylesheets/components/_clock.scss
+++ b/app/assets/stylesheets/components/_clock.scss
@@ -7,7 +7,7 @@
   background: transparent;
   box-sizing: border-box;
   border-radius: 100%;
-  border: 10px solid #575756;
+  border: 10px solid $b-grey-light;
 
   top: 0;
   left: 0;
@@ -61,7 +61,7 @@
     top: 0;
     bottom: 0;
     margin: auto;
-    background: #E43116;
+    background: $b-red;
     border-radius: 100%;
   }
 
@@ -77,7 +77,7 @@
     &:before {
       position: absolute;
       content: "";
-      background: #E96314;
+      background: $b-orange;
       height: 4rem;
       width: 0.8rem;
       top: 2rem;
@@ -115,7 +115,7 @@
     &:before {
       position: absolute;
       content: "";
-      background: #F7B925;
+      background: $b-yellow;
       height: 5rem;
       width: 0.6rem;
       top: 0.6rem;
