--- a/app/assets/stylesheets/config/_materialize_variables.scss
+++ b/app/assets/stylesheets/config/_materialize_variables.scss
@@ -2,3 +2,28 @@
  * Materialize sass variable
  * (see https://github.com/mkhairi/materialize-sass/blob/master/app/assets/stylesheets/materialize/components/_variables.scss)
  * ------------------------------------- */
+
+@media only screen and (min-width: 0) {
+  /* line 6, /usr/local/Cellar/rbenv/1.0.0/versions/2.3.1/lib/ruby/gems/2.3.0/gems/materialize-sass-0.98.1/app/assets/stylesheets/materialize/components/_typography.scss */
+  html {
+    font-size: 11px;
+  }
+}
+@media only screen and (min-width: 376px) {
+  /* line 6, /usr/local/Cellar/rbenv/1.0.0/versions/2.3.1/lib/ruby/gems/2.3.0/gems/materialize-sass-0.98.1/app/assets/stylesheets/materialize/components/_typography.scss */
+  html {
+    font-size: 14px;
+  }
+}
+@media only screen and (min-width: 769px) {
+  /* line 6, /usr/local/Cellar/rbenv/1.0.0/versions/2.3.1/lib/ruby/gems/2.3.0/gems/materialize-sass-0.98.1/app/assets/stylesheets/materialize/components/_typography.scss */
+  html {
+    font-size: 15px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  /* line 6, /usr/local/Cellar/rbenv/1.0.0/versions/2.3.1/lib/ruby/gems/2.3.0/gems/materialize-sass-0.98.1/app/assets/stylesheets/materialize/components/_typography.scss */
+  html {
+    font-size: 16px;
+  }
+}
