--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,6 +14,10 @@
   position: absolute;
   top: 4rem;
   left: 4rem;
+  @media (max-width: 376px) {
+    top: 1rem;
+    left: 1rem;
+  }
 }
 
 .bg-content-container {
@@ -32,6 +36,9 @@
   font-weight: 500;
   font-family: "pimpernel", serif;
   margin-top: 3rem;
+  @media (max-width: 375px) {
+    font-size: 3rem;
+  }
 }
 
 .bg-subtitle {
@@ -40,6 +47,10 @@
   font-size: 1.3rem;
   line-height: 2rem;
   font-weight: 400;
+  @media (max-width: 376px) {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 // page home
@@ -59,11 +70,18 @@
   i {
     font-size: 3rem;
   }
+  @media (max-width: 376px) {
+    bottom: 2rem;
+    right: 2rem;
+  }
 }
 
 .bg-logo {
   margin-top: 2rem;
   img {
     height: 18rem;
+    @media (max-width: 376px) {
+      height: 14rem;
+    }
   }
 }
