--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -23,3 +23,33 @@ $b-orange: #ff4c00;
 $b-yellow: #ffb20d;
 $b-green: #33ff00;
 
+// devices
+// Media Query Ranges - Width
+$small-screen-up: 321px !default; // Iphone5
+$sm-screen-up: 376px !default; // Iphone6
+
+$medium-screen-up: 769px !default; // Ipad
+$ml-screen-up: 1025px !default; // Ipad pro
+
+$large-screen-up: 1281px !default; // Macbook pro
+$very-large-screen-up: 2881px !default; // Macbook pro retina
+$extra-large-screen-up: 4097px !default; // ecran retina 4k
+
+$small-screen: 320px !default; // Iphone5
+$sm-screen: 375px !default; // Iphone6
+
+$medium-screen: 768px !default; // Ipad
+$ml-screen-up: 1024px !default; // Ipad pro
+
+$large-screen: 1280px !default; // Macbook pro
+$very-large-screen: 2880px !default; // Macbook pro retina
+$extra-large-screen: 4096px !default; // ecran retina 4k
+
+
+$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
+$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
+$extra-large-and-up: "only screen and (min-width : #{$large-screen-up})" !default;
+$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
+$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
+$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
+
