brouillon en cours de création, catégorie produit done

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -16,12 +16,17 @@ $b-grey: #333333;
 $b-grey-dark: #262626;
 $b-black: #000000;
 
-$b-grey-light: #3B3634;
+$b-grey-light: #f2f2f2; // for backgrounds
 
 $b-red: #ff1f03;
 $b-orange: #ff4c00;
 $b-yellow: #ffb20d;
 $b-green: #33ff00;
+
+$b-red-light: #F4CCCC;
+$b-orange-light: #FCE5CD;
+$b-yellow-light: #FFF2CC;
+$b-green-light: #D9EAD3;
 
 // devices
 // Media Query Ranges - Width
