--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -6,6 +6,8 @@ nav {
   padding: 0 6rem;
   height: 6rem;
   line-height: 5rem;
+  position: fixed;
+  z-index: 1000;
 }
 
 .brand-logo {
@@ -30,9 +32,10 @@ nav {
     font-size: 1.2rem;
     &:hover {
       color: white;
-      border-bottom: 1px solid $b-green;
+      border-bottom: 1px solid $b-green-light;
       border-left: none;
       padding: 0;
+      background-color: transparent;
     }
   }
 }
