section team ok

--- a/app/views/pages/brouillon.html.erb
+++ b/app/views/pages/brouillon.html.erb
@@ -83,8 +83,38 @@
 <!-- ************************** -->
 
 <!-- Présentation de l'équipe -->
-<div id="qui-sommes-nous" class="section scrollspy">
-  <p>Qui sommes-nous ?</p>
+<div id="qui-sommes-nous" class="section scrollspy bg-grey section-container">
+  <h4 class="center-align b-grey section-title">Les fondateurs</h4>
+  <div id="section-equipe">
+    <div class="founder">
+      <div class="founder-image" id="thomas-image" style="background-image: url('<%= image_path('thomas.png')%>');">
+      </div>
+      <div class="founder-bio bg-white">
+        <div>
+          <h3>Thomas Valera</h3>
+          <p>Hello, mois c'est Thomas.</p>
+          <p>Je suis né et j’ai grandi dans le sud est de la France, à côté de Cannes.</p>
+          <p>J’ai découvert le jus pressé à froid lors de mes années passées en Amérique du Nord. J’ai immédiatement été convaincu par le potentiel de ce type de produit encore trop méconnu en France.</p>
+          <p>Dès mon retour en France, j’ai réfléchi à développer une marque qui allierait qualité, plaisir et accessibilité avec une idée en tête qui m’anime depuis longtemps : m’engager pour la démocratisation du mieux-manger et du mieux-vivre.</p>
+          <p>Voilà comment est né Atelier Jus, le bio comme tu ne l’as jamais bu!</p>
+        </div>
+      </div>
+    </div>
+    <div class="founder">
+      <div class="founder-bio bg-white">
+        <div>
+          <h3>Romain Perraut</h3>
+          <p>Salut, moi c’est Romain, le Breton de la bande.</p>
+          <p>Je suis un grand fan de sport, joueur de rugby depuis mes 7 ans, j’aime toucher à tous les sport et notamment les sport de voiles et de glisse.</p>
+          <p>En charge des partenariats sportifs dans une grande entreprise française, j’ai tout de suite été conquis par l’aventure Atelier Jus.</p>
+          <p>Comme Thomas, je suis sensible aux problématiques environnementales et écologiques et c’est pour ça que nous souhaitons ancrer ces valeurs dans notre entreprise.</p>
+          <p>Du Bio, du frais, du bon, c’est ce que nous souhaitons te proposer avec Atelier Jus, le bio comme tu ne l’as jamais bu !</p>
+        </div>
+      </div>
+      <div class="founder-image" id="romain-image" style="background-image: url('<%= image_path('romain.png')%>');">
+      </div>
+    </div>
+  </div>
 </div>
 <!-- ************************** -->
 
