ajout des liens vers les reseaux sociaux

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,6 @@
 <!-- Bannière -->
 
 <div class="socials">
-  <a href="/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-  <a href="/"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+  <a href="https://www.instagram.com/atelierjus/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+  <a href="https://www.facebook.com/atelierjus/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 </div>
